# chip8-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  ops.rs  system.rs
