[package]
name = "chip8"
version = "0.1.0"
authors = ["Spencer Elliott <spencer.elliott@xe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.0.2"
winit = "0.20.0-alpha4"
winit_input_helper = "0.4.0-alpha4"
rand = "0.7.3"
